--- a/index.html
+++ b/index.html
@@ -9,6 +9,25 @@
 </head>
 <body>
     <h1>My First Bootstrap Page</h1>
+
+    <button>My Button</button>
+    <button class="btn btn-primary">Primary button</button>
+    <button class="btn btn-secondary">Secondary button</button>
+    <button type="button" class="btn btn-danger">Danger</button>
+    
+    <div>
+        <h1>First Div</h1>
+        <p class="text-primary text-white">Paragraph</p>
+    </div>
+
+    <div>
+        <h1>Second Div</h1>
+        <p class="bg-primary text-white">Learnig bootstrap</p>
+    </div>
+    <h1>Images</h1>
+    <img class="img-fluid w-50 rounded-circle img-thumbnail"src="images/showOff/holiday.jpg" alt="Holiday">
+
+
     
 </body>
 </html>
